--- a/anfaq_elsoas.html
+++ b/anfaq_elsoas.html
@@ -111,7 +111,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div
+                        <!-- <div
                             class="hJDwNd-AhqUyc-qWD73c Ft7HRd-AhqUyc-qWD73c purZT-AhqUyc-II5mzb ZcASvf-AhqUyc-II5mzb pSzOP-AhqUyc-qWD73c Ktthjf-AhqUyc-qWD73c JNdkSc SQVYQc">
                             <div class="JNdkSc-SmKAyb LkDMRd">
                                 <div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;"
@@ -153,7 +153,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
@@ -179,15 +179,21 @@
                         القناة في أقل وقت ممكن، مقارنة بالاعتماد السابق على المعديات وكباري العبور العائمة. </p>
                     <ul>
                         <li>نفق الشهيد أحمد حمدي 2 (بالسويس): يعزز الربط بين سيناء والدلتا، إلى جانب النفق الأول.
+                            <img class="mb" src="./imgs/310.webp" alt="">
 
                         </li>
-                        <li>أنفاق الإسماعيلية: تمتد بطول 5.8 كم على عمق 70 مترًا تحت سطح القناة، مما يسمح بعبور المركبات
-                            في دقائق بدلاً من ساعات.
+                        <li>
 
+                            <p > أنفاق الإسماعيلية: تمتد بطول 5.8 كم على عمق 70 مترًا تحت سطح القناة، مما يسمح بعبور
+                                المركباتفي دقائق بدلاً من ساعات.
+                            </p>
+
+
+                            <img class="mb" src="./imgs/ismalia_anfaq.jpg" alt="">
                         </li>
                         <li>أنفاق بورسعيد: تربط شرق وغرب القناة، وتمثل جزءًا أساسيًا من تنمية منطقة شرق بورسعيد الصناعية
                             واللوجستية.
-
+                            <img class="mb" src="./imgs/anfaq_elsoas_2.jpeg" alt="">
                         </li>
                     </ul>
                     <h2>التحديات الهندسية والتقنية
@@ -196,10 +202,11 @@
                         العميق (Tunnel Boring Machines - TBM)، وهي من أكبر ماكينات الحفر في العالم، لضمان الدقة والسلامة
                         أثناء التنفيذ. كما تم تزويد الأنفاق بأحدث أنظمة الإضاءة، والتهوية، والمراقبة، والتأمين، لضمان
                         أعلى مستويات الأمان للمركبات والمواطنين.
+
                     </p>
                 </div>
-                
-                <div class="imgs">
+
+                <div class="imgs dsk">
                     <img src="./imgs/anfaq_elsoas_2.jpeg" alt="">
                     <img src="./imgs/310.webp" alt="">
                     <img src="./imgs/ismalia_anfaq.jpg" alt="">
@@ -228,10 +235,12 @@
                             سيناء، مما يعزز الأمن القومي المصري. </li>
                     </ul>
                 </div>
-                <img src="./imgs/anfaq_elsoas_3.jpeg" alt="">
+                <video src="./imgs/انفاق قناة السويس الجديدة.mp4" controls></video>
             </div>
         </section>
     </main>
+
+    <script src="./main.js"></script>
 </body>
 
 </html>
