--- a/el3alamen.html
+++ b/el3alamen.html
@@ -39,9 +39,9 @@
                 </a>
                 <ul class="nav">
                     <li><a href="./">الرئيسية</a></li>
-                    <li><a href="./anfaq_elsoas.html" class="active">أنفاق قناة السويس</a></li>
+                    <li><a href="./anfaq_elsoas.html">أنفاق قناة السويس</a></li>
                     <li><a href="./el3asma_eledarea.html" dir="ltr">العاصمة الأدارية الجديدة</a></li>
-                    <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
+                    <li><a href="./el3alamen.html" dir="ltr" class="active">مدينة العلمين الجديدة</a></li>
                     <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
                     <li><a href="./qnat_elsoas.html" dir="ltr">قناة السويس الجديدة</a></li>
                     <li><a href="./elerhab.html" dir="ltr">مكافحة الإرهاب</a></li>
@@ -144,48 +144,55 @@
                         <p>تتميز مدينة العلمين الجديدة بأنها ليست فقط مدينة سياحية، بل هي مدينة متكاملة تضم مناطق سكنية، ومراكز أعمال، ومنشآت خدمية، مما  يجعلها وجهة استثمارية عالمية
 
                         </p>
+                        <img class="mb" src="./imgs/معلومات-عن-مدينة-العلمين-الجديدة.jpg" alt="">
 
                         <h4>الأبراج الشاهقة والمنطقة السياحية
                         </h4>
                         <p>تم بناء مجموعة من الأبراج الفندقية والسكنية الفاخرة، التي تطل على البحر مباشرة، ومن بينها أبراج العلمين الشاهقة، التي تعكس الطابع الحديث والمعماري الفريد للمدينة.
 
                         </p>
+                        <img class="mb" src="./imgs/عيوب-ومميزات-مدينة-العلمين-الجديدة.webp" alt="">
 
                         <h4>ممشى سياحي عالمي وشواطئ مفتوحة
                         </h4>
                         <p>تم إنشاء ممشى سياحي يمتد لعدة كيلومترات على طول الساحل، ليكون وجهة مميزة للسائحين والمقيمين، بالإضافة إلى توفير شواطئ مفتوحة ومنطقة سياحية متكاملة تستقطب الزوار من داخل وخارج مصر.
 
                         </p>
+                        <img class="mb" src="./imgs/3lamen_madena.jpg" alt="">
 
                         <h4>شبكة طرق ومواصلات حديثة
                         </h4>
                         <p>تم تنفيذ شبكة طرق متطورة تربط المدينة بباقي المحافظات، بالإضافة إلى إدخال وسائل نقل متقدمة مثل القطار الكهربائي السريع والمونوريل، لتسهيل الوصول إليها وجذب المزيد من الاستثمارات.
 
                         </p>
+                        <img class="mb" src="./imgs/troq.jpg" alt="">
 
                         <h4>الحي اللاتيني والمنطقة الثقافية
                         </h4>
                         <p>تم بناء الحي اللاتيني، الذي يتميز بطراز معماري مستوحى من القاهرة الخديوية والإسكندرية القديمة، ليكون مركزًا ثقافيًا وسكنيًا متكاملًا، بجانب إنشاء دار أوبرا، ومتاحف، ومراكز ثقافية، تعزز الجانب الفني والحضاري للمدينة.
 
                         </p>
+                        <img class="mb" src="./imgs/3lamen_tlatene.jpg" alt="">
 
                         <h4>منطقة الأعمال والاستثمار
                         </h4>
                         <p>تضم المدينة منطقة أعمال متطورة تستهدف جذب الشركات العالمية، فضلًا عن إقامة جامعات دولية، ومؤسسات تعليمية عالية المستوى، لتعزيز الاستثمار في المجالين التعليمي والتجاري.
 
                         </p>
+                        <img class="mb" src="./imgs/estesmar.jpg" alt="">
 
                         <h4>مدينة طبية ومستشفيات عالمية
                         </h4>
                         <p>تضم العلمين الجديدة مدينة طبية متكاملة تحتوي على مستشفيات مجهزة بأحدث التقنيات، ومراكز علاجية متخصصة، مما يجعلها واحدة من أهم الوجهات الصحية في الشرق الأوسط.
 
                         </p>
+                        <img class="mb" src="./imgs/hospitals_3asema.jpg" alt="">
 
 
                     </div>
                 </div>
                 
-                <div class="imgs">
+                <div class="imgs dsk">
                     <img src="./imgs/معلومات-عن-مدينة-العلمين-الجديدة.jpg" alt="">
                     <img src="./imgs/عيوب-ومميزات-مدينة-العلمين-الجديدة.webp" alt="">
                     <img src="./imgs/3lamen_madena.jpg" alt="">
@@ -212,6 +219,8 @@
             </div>
         </section>
     </main>
+
+    <script src="./main.js"></script>
 </body>
 
 </html>
