--- a/el3asma_eledarea.html
+++ b/el3asma_eledarea.html
@@ -39,8 +39,8 @@
                 </a>
                 <ul class="nav">
                     <li><a href="./">الرئيسية</a></li>
-                    <li><a href="./anfaq_elsoas.html" class="active">أنفاق قناة السويس</a></li>
-                    <li><a href="./el3asma_eledarea.html" dir="ltr">العاصمة الأدارية الجديدة</a></li>
+                    <li><a href="./anfaq_elsoas.html">أنفاق قناة السويس</a></li>
+                    <li><a href="./el3asma_eledarea.html" dir="ltr" class="active">العاصمة الأدارية الجديدة</a></li>
                     <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
                     <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
                     <li><a href="./qnat_elsoas.html" dir="ltr">قناة السويس الجديدة</a></li>
@@ -151,30 +151,35 @@
                         <p>تم إنشاء الحي الحكومي ليضم مقر رئاسة مجلس الوزراء، ومباني الوزارات المختلفة، والبرلمان، وهو
                             مجهز بأحدث التقنيات الرقمية لتحويل الجهاز الإداري إلى حكومة ذكية بلا ورق، مما يرفع كفاءة
                             العمل الحكومي ويسهل تقديم الخدمات للمواطنين.</p>
+                        <img class="mb" src="./imgs/1678135217063.jpg" alt="">
 
                         <h4>مركز مالي وأعمال عالمي
                         </h4>
                         <p>
                             تم إنشاء الحي المالي والتجاري، الذي يضم مقرات البنك المركزي والبورصة المصرية، إلى جانب مجمعات تجارية ضخمة تستهدف جذب الاستثمارات الأجنبية وتعزيز الاقتصاد المصري
                         </p>
+                        <img class="mb" src="./imgs/3sema_3alme.jpg" alt="">
 
                         <h4>أطول برج في أفريقيا – البرج الأيقوني
                         </h4>
                         <p>تم بناء البرج الأيقوني، الذي يعد أطول برج في أفريقيا بارتفاع 400 متر، ليكون مركزًا اقتصاديًا وسياحيًا عالميًا يعكس الطابع العصري للعاصمة الجديدة.
 
                         </p>
+                        <img class="mb" src="./imgs/17515124781603957407.jpg" alt="">
 
                         <h4>شبكة طرق ومواصلات حديثة
                         </h4>
                         <p>تم تنفيذ شبكة طرق متطورة بطول 650 كم، بالإضافة إلى مشروع القطار الكهربائي السريع والمونوريل، لربط العاصمة بالقاهرة الكبرى والمدن الجديدة، مما يسهل التنقل ويعزز الاستثمارات في المنطقة
 
                         </p>
+                        <img class="mb" src="./imgs/202207121229292929.jpg" alt="">
 
                         <h4>حي سكني متكامل ومدينة ذكية
                         </h4>
                         <p>تم تطوير مناطق سكنية بمختلف الفئات، تشمل الإسكان الفاخر والمتوسط والاجتماعي، كما تم إدخال أنظمة ذكية لإدارة المدينة، تشمل كاميرات مراقبة حديثة، وأنظمة إضاءة ذكية، وتقنيات توفير الطاقة.
 
                         </p>
+                        <img class="mb" src="./imgs/مميزات-وعيوب-العاصمة-الإدارية.webp" alt="">
 
                         <h4>
                             مشروعات تعليمية وصحية متطورة
@@ -184,10 +189,11 @@
                         <p>تضم العاصمة جامعات دولية مرموقة ومدارس عالمية، إلى جانب مدينة طبية متكاملة مجهزة بأحدث المستشفيات والمراكز الطبية، لضمان تقديم خدمات تعليمية وصحية بمعايير عالمية.
 
                         </p>
+                        <img class="mb" src="./imgs/أين-تقع-العاصمة-الإدارية-الجديدة-1024x676.webp" alt="">
                     </div>
                 </div>
                 
-                <div class="imgs">
+                <div class="imgs dsk">
                     <img src="./imgs/مميزات-وعيوب-العاصمة-الإدارية.webp" alt="">
                     <img src="./imgs/17515124781603957407.jpg" alt="">
                     <img src="./imgs/202207121229292929.jpg" alt="">
@@ -214,6 +220,8 @@
             </div>
         </section>
     </main>
+
+    <script src="./main.js"></script>
 </body>
 
 </html>
