--- a/haql_zohr.html
+++ b/haql_zohr.html
@@ -39,10 +39,10 @@
                 </a>
                 <ul class="nav">
                     <li><a href="./">الرئيسية</a></li>
-                    <li><a href="./anfaq_elsoas.html" class="active">أنفاق قناة السويس</a></li>
+                    <li><a href="./anfaq_elsoas.html" >أنفاق قناة السويس</a></li>
                     <li><a href="./el3asma_eledarea.html" dir="ltr">العاصمة الأدارية الجديدة</a></li>
                     <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
-                    <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
+                    <li><a href="./haql_zohr.html" dir="ltr" class="active">حقل ظهر</a></li>
                     <li><a href="./qnat_elsoas.html" dir="ltr">قناة السويس الجديدة</a></li>
                     <li><a href="./elerhab.html" dir="ltr">مكافحة الإرهاب</a></li>
                 </ul>
@@ -121,41 +121,47 @@
                         <p>تم تنفيذ المشروع في زمن قياسي عالمي، حيث استغرق أقل من 28 شهرًا منذ الاكتشاف حتى بدء الإنتاج، وهو معدل أسرع بكثير مقارنة بالمشروعات المماثلة التي تستغرق من 6 إلى 8 سنوات
 
                         </p>
+                        <img class="mb" src="./imgs/F2Nkfj0WYAA6g2A.jpg" alt="">
 
                         <h4>تحقيق الاكتفاء الذاتي من الغاز الطبيعي
                         </h4>
                         <p>بفضل إنتاج حقل ظهر، استطاعت مصر تحقيق الاكتفاء الذاتي من الغاز الطبيعي بحلول عام 2018، مما أدى إلى وقف استيراد الغاز المسال وتوفير 2.5 مليار دولار سنويًا من فاتورة الاستيراد
 
                         </p>
+                        <img class="mb" src="./imgs/haql_intag.jpg" alt="">
 
                         <h4>زيادة الطاقة الإنتاجية للحقل
                         </h4>
                         <p>بدأ الحقل بإنتاج 350 مليون قدم مكعب يوميًا في ديسمبر 2017، ومع التوسع المستمر، وصلت طاقته الإنتاجية إلى 3.2 مليار قدم مكعب يوميًا في عام 2020، مما يعزز قدرات مصر على التصدير للأسواق العالمية.
 
                         </p>
+                        <img class="mb" src="./imgs/zohr_beneatahtea.jpg" alt="">
 
                         <h4>جذب الاستثمارات الأجنبية وتعزيز الشراكات الدولية
                         </h4>
                         <p>ساهم نجاح مشروع حقل ظهر في جذب استثمارات أجنبية ضخمة، حيث تجاوزت 10 مليارات دولار، وفتح المجال لشراكات استراتيجية مع شركات عالمية مثل إيني، وبي بي، وروزنفت الروسية، مما عزز مكانة مصر كمركز جاذب للاستثمار في قطاع الطاقة.
 
                         </p>
+                        <img class="mb" src="./imgs/936.webp" alt="">
 
                         <h4>تحويل مصر إلى مركز إقليمي للطاقة
                         </h4>
                         <p>ساعد الحقل في تحويل مصر إلى محور إقليمي لتداول الغاز، حيث أصبحت مصر قادرة على تسييل الغاز وتصديره إلى أوروبا والأسواق العالمية، مما جعلها لاعبًا أساسيًا في سوق الطاقة العالمي.
 
                         </p>
+                        <img class="mb" src="./imgs/eqleme.jpg" alt="">
 
                         <h4>تطوير البنية التحتية لقطاع الطاقة
                         </h4>
                         <p>رافق المشروع تطوير محطات معالجة الغاز، وشبكات الأنابيب، وموانئ التصدير، مما دعم منظومة الطاقة في مصر وساهم في تعزيز قدرات شبكة الكهرباء القومية، والاعتماد على الغاز كمصدر نظيف ومستدام للطاقة.
 
                         </p>
+                        <img class="mb" src="./imgs/انتاج-مصر-من-الغاز-الطبيعي-حقل-ظهر.jpg" alt="">
                     </div>
                 </div>
                 
                 
-                <div class="imgs">
+                <div class="imgs dsk">
                     <img src="./imgs/F2Nkfj0WYAA6g2A.jpg" alt="">
                     <img src="./imgs/936.webp" alt="">
                     <img src="./imgs/zohr_beneatahtea.jpg" alt="">
@@ -179,6 +185,7 @@
             </div>
         </section>
     </main>
+    <script src="./main.js"></script>
 </body>
 
 </html>
