--- a/qnat_elsoas.html
+++ b/qnat_elsoas.html
@@ -39,11 +39,11 @@
                 </a>
                 <ul class="nav">
                     <li><a href="./">الرئيسية</a></li>
-                    <li><a href="./anfaq_elsoas.html" class="active">أنفاق قناة السويس</a></li>
+                    <li><a href="./anfaq_elsoas.html" >أنفاق قناة السويس</a></li>
                     <li><a href="./el3asma_eledarea.html" dir="ltr">العاصمة الأدارية الجديدة</a></li>
                     <li><a href="./el3alamen.html" dir="ltr">مدينة العلمين الجديدة</a></li>
                     <li><a href="./haql_zohr.html" dir="ltr">حقل ظهر</a></li>
-                    <li><a href="./qnat_elsoas.html" dir="ltr">قناة السويس الجديدة</a></li>
+                    <li><a href="./qnat_elsoas.html" dir="ltr" class="active">قناة السويس الجديدة</a></li>
                     <li><a href="./elerhab.html" dir="ltr">مكافحة الإرهاب</a></li>
                 </ul>
             </div>
@@ -140,40 +140,47 @@
                         <p>تم إنجاز مشروع قناة السويس الجديدة في عام واحد فقط، رغم التقديرات الأولية التي كانت تشير إلى 3 سنوات على الأقل، مما يعكس قدرة مصر على إنجاز المشروعات القومية الكبرى بكفاءة عالية.
 
                         </p>
+                        <img class="mb" src="./imgs/6-8-2015-1-jpg.webp" alt="">
 
                         <h4>ازدواج القناة وتحسين حركة الملاحة
                         </h4>
                         <p>شمل المشروع إنشاء ممر ملاحي جديد بطول 35 كم، بالإضافة إلى توسيع وتعميق 37 كم من القناة الأصلية، ليصل إجمالي طول المشروع إلى 72 كم، مما أدى إلى تقليل زمن انتظار السفن من 18 ساعة إلى 11 ساعة فقط، وزيادة القدرة الاستيعابية لحركة الملاحة.
 
                         </p>
+                        <img class="mb" src="./imgs/1-1776251.webp" alt="">
 
                         <h4>تعزيز مكانة قناة السويس كممر ملاحي عالمي
                         </h4>
                         <p>ساهم المشروع في زيادة عدد السفن العابرة يوميًا، حيث ارتفع العدد من 49 سفينة إلى أكثر من 97 سفينة مستقبليًا، مما عزز من قدرة القناة التنافسية أمام الممرات البديلة، مثل الطريق البحري عبر القطب الشمالي.
 
                         </p>
+                        <img class="mb" src="./imgs/qnat_gedea_ta3zez.jpg" alt="">
 
                         <h4>زيادة العائدات الاقتصادية
                         </h4>
                         <p>منذ افتتاح القناة الجديدة في 6 أغسطس 2015، ارتفعت إيرادات القناة بشكل ملحوظ، حيث سجلت 9.4 مليار دولار عام 2023 مقارنة بـ 5.3 مليار دولار عام 2014، مما أدى إلى تحسين ميزان المدفوعات المصري وزيادة التدفقات النقدية الأجنبية.
 
                         </p>
+                        <img class="mb" src="./imgs/qnat_melaha.jpg" alt="">
 
                         <h4>خلق فرص عمل وتحفيز الاقتصاد المحلي
                         </h4>
                         <p>ساهم المشروع في توفير أكثر من مليون فرصة عمل مباشرة وغير مباشرة، من خلال أعمال الحفر والبنية التحتية، كما عزز من نمو القطاعات المرتبطة بالنقل واللوجستيات والتجارة.
 
                         </p>
+                        <img class="mb" src="./imgs/201612081149284928.jpg" alt="">
 
                         <h4>إنشاء منطقة اقتصادية متكاملة حول القناة
                         </h4>
                         <p>لم يقتصر المشروع على تحسين حركة الملاحة فقط، بل تضمن أيضًا تطوير المنطقة الاقتصادية لقناة السويس، والتي تشمل موانئ حديثة، ومناطق صناعية، ومراكز لوجستية عالمية، مما جعل مصر وجهة استثمارية متميزة للشركات العالمية.
 
                         </p>
+
+                        <img class="mb" src="./imgs/manteqa.jpg" alt="">
                     </div>
                     
                 </div>
-                <div class="imgs">
+                <div class="imgs dsk">
                     <img src="./imgs/6-8-2015-1-jpg.webp" alt="">
                     <img src="./imgs/1-1776251.webp" alt="">
                     <img src="./imgs/qnat_gedea_ta3zez.jpg" alt="">
@@ -200,6 +207,8 @@
             </div>
         </section>
     </main>
+
+    <script src="./main.js"></script>
 </body>
 
 </html>
